Overlapping rows fixed alhamdulilah

--- a/styles/main.css
+++ b/styles/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 .full-height {
-	height: 100%;
+	min-height: 100%;
 }
 
 .title {
